2012-01-13  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* release 0.6.1

	- Added CUDA support with Matlab.

	* CMakeLists.txt:

	- Select gcc v4.4 automatically if we want to compile Clarity with
	its CUDA implementation. The CUDA implementation doesn't seem to
	make a big difference, though. This is a test on a volume with
	size RxCx19 and a PSF of size 9x9x7. Time in seconds.

	     | no CUDA  |  CUDA   |
	---------------------------
	 128 |   14.55  |  15.38  |
	 256 |    9.13  |   9.85  |
	 512 |  103.44  |  93.79  |
	1024 |  162.80  | 156.00  |
	---------------------------

	- Fix bug. We need to tell cmake from here to look in
	cpp/src/third-party/cquammen-Clarity/CMake, so that it can use
	FindFTTW.cmake.

	* cpp/src/third-party/cquammen-Clarity/CMakeLists.txt:

	- If CMAKE_MODULE_PATH has been set from the root CMakeLists.txt
	of Gerardus, do not overwrite it.

	- CUDA v4.0 RC2 is incompatible with gcc >= 4.5. Gcc 4.4. is
	selected in the root gerardus CMakeLists.txt, but this flag needs
	to be set by hand, because otherwise nvcc will read the version of
	the default gcc in the system, that is v4.5.

	* Replace cpp/src/third-party/cquammen-Clarity by the latest
	version:

	- Cory Quammen has fixed the bugs in Clarity that prevented it
	from compiling with CUDA enabled at least in Ubuntu 11.10. Version
	downloaded today from

	https://github.com/cquammen/Clarity/downloads

	as cquammen-Clarity-c73c97d.

2011-12-11  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* cpp/src/RigidRegistration2D.cxx (v0.3.0):

	- Use MattesMutualInformation instead of MeanSquares as the metric.

2011-12-10  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* cpp/src/RigidRegistration2D.cxx (v0.2.0):

	- Remove backgroundGray argument. Instead, have an "invert"
	switch. If the object is white and the background black, we use
	the normal registration. If viceversa, the user selects
	"--invert", and this inverts the luminance values before